--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -151,6 +151,70 @@
   background-clip: content-box;
 }
 
+
+.onboard-container {
+  box-shadow: 10px 10px 30px rgba(0,0,0,.1);
+  border-radius: .7em;
+  padding: 4em;
+  background: white;
+  min-width: 500px;
+  text-align: center;
+}
+
+.onboard {
+  background-color: rgb(76, 0, 255);
+  color: white;
+  display: inline-block;
+  text-decoration: none;
+  padding: .7em;
+  text-align: center;
+  font-size: 1.3rem;
+  border-radius: .3em;
+  margin-top: 2em;
+}
+
+.loader {
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
+  display: none;
+}
+
+.account {
+  background: rgb(233, 233, 233);
+  padding: .3em;
+  border-radius: .3em;
+  position: relative;
+  display: inline-block;
+  text-indent: 1.2em;
+}
+
+.account:before {
+      position: absolute;
+      content: "";
+      background: green;
+      width: .7em;
+      height: .7em;
+      border-radius: 50%;
+      left: .5em;
+      top: .6em;
+}
+
+.up {
+  position: absolute;
+  top: 2em;
+  right: 2em;
+  width: 10em;
+  display: none;
+}
+
+.confetti {
+  position: absolute;
+  width: 20em;
+  z-index: 2;
+  display: none;
+}
+
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
   .card:hover {
