--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   height: 100vh; /* Adjust based on your needs */
-  background-image: url('../public/SamuelMorse.jpeg'); /* Set your background image */
+  background-image: url('http://localhost:3001/uploadedImage.jpg'); /* Set your background image */
   background-size: cover;
   background-position: center;
   text-shadow: 
