--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,6 @@
 .main {
   position: relative;
-  width: 100%;
-  height: 100vh; /* Adjust based on your needs */
-  background-image: url('http://localhost:3001/uploadedImage.jpg'); /* Set your background image */
-  background-size: cover;
-  background-position: center;
+  min-height: '100vh';
   text-shadow: 
     1px 1px 0 black, 
     -1px -1px 0 black,
@@ -12,13 +8,11 @@
     -1px 1px black;
 }
 
-.main::before {
-  content: '';
+.spotlight {
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
-  background-image: radial-gradient(circle, transparent 55%, rgba(0, 0, 0, 1) 65%); /* Adjust the gradient to your liking */
-  pointer-events: none; /* Allows clicks to pass through */
+  width: 100%;
+  height: 100%;
+  background-image: radial-gradient(circle, #fff, #000);
 }
